# musegpt

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  cmake.yml
docs/: CNAME  acknowledgments.md  contributing.md  demo.md  ethics.md  features.md  getting_started.md  index.md  installation.md  license.md  practical_applications.md  requirements.md  supported_platforms.md  technical_approach.md  thank_you.md  usage.md
scripts/: clean.ps1  clean.sh  models.ps1  models.sh
scripts/run/: debug.ps1  debug.sh  release.ps1  release.sh
src/: LlamaServer.cpp  LlamaServer.h  main.cpp
